--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             <div class="Column_1">
                 <h1>About</h1>
                 <p>
-                    Hello my name is Joshua Heaton and I am a software developer who loves to code! I also am always up for an adventure and love to workout!
+                    Hello my name is Joshua Heaton and I am a software developer who loves to code! I also am always up for an adventure and love to exercise!
                     <br>
-                    <br>I am a student of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. 
+                    <br>I am a student of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, Python, C# and more. 
                     <br>
                     <br>I am a full-stack developer and would love to work with you on your project. <a onclick="openForm()" class="contact">Contact</a> me below!
                 </p>
