--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="#About">About</a>
             <a href="#Github">Github</a>
             <a href="#LinkedIn">LinkedIn</a>
+            <a href="#Python-Project">Python Project</a>
             
             <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
         </div>
@@ -60,8 +61,8 @@
                         <div class="text">I'm avaible to assist you on your project!</div>
                     </div>
                     <div class="mySlides fade">
-                        <img class="Slideshow_Images" src="Images/HTML_CSS_and_JavaScript.jpeg" alt="HTML, CSS, and JS logos">
-                        <div class="text">I am a full-stack software developer,<br> trained in:<br>HTML, CSS, JavaScript,</div>
+                        <img class="Slideshow_Images" src="Images/SQL_and_Database.jpg" alt="SQL logo">
+                        <div class="text">I am a software developer<br> trained in:<br>back end development, databases and SQL.</div>
                     </div>
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="Images/Python.png" alt="Python logo">
@@ -71,9 +72,10 @@
                         <img class="Slideshow_Images" src="Images/C_Sharp_and_Dot_NET.png" alt="C# logo">
                         <div class="text">C#, .NET Framework, ASP.NET, MVC, </div>
                     </div>
+                    
                     <div class="mySlides fade">
-                        <img class="Slideshow_Images" src="Images/SQL_and_Database.jpg" alt="SQL logo">
-                        <div class="text">back end development, databases and SQL.</div>
+                        <img class="Slideshow_Images" src="Images/HTML_CSS_and_JavaScript.jpeg" alt="HTML, CSS, and JS logos">
+                        <div class="text">HTML, CSS, JavaScript,</div>
                     </div>
                     <div class="mySlides fade">
                         <img class="Slideshow_Images" src="Images/pc.jpeg" alt="Picture of Me">
@@ -101,11 +103,11 @@
             <div class="Column_1">
                 <h1>About</h1>
                 <p>
-                    Hello my name is Joshua Heaton and I am a software developer who loves to code! I also am always up for an adventure and love to exercise!
+                    Hello my name is Joshua Heaton and I am a software developer who loves to code! I also am always up for an adventure and love to stay active!
                     <br>
                     <br>I am a student of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, Python, C# and more. 
                     <br>
-                    <br>I am a full-stack developer and would love to work with you on your project. <a onclick="openForm()" class="contact">Contact</a> me below!
+                    <br>I am a back-end developer and would love to work with you on your project. <a onclick="openForm()" class="contact">Contact</a> me below!
                 </p>
             </div>
         </div>
@@ -129,14 +131,34 @@
         <div class="Row" id="LinkedIn">
             <div class="Column_3">
                 <a href="https://www.linkedin.com/in/joshua-heaton-5296b727b/" target="_blank"><img src="Images/linkedin.png" alt="LinkedIn Logo"></a>
+            </div>
+            <div class="Column_4">
+                <h1>LinkedIn</h1>
+            <p class="center">
+                You can view my LinkedIn profile here:
+                <br>
+                <p class="center"><a href="https://www.linkedin.com/in/joshua-heaton-5296b727b/" target="_blank">My LinkedIn</a></p>
+                </p>
+            </div>
+        </div>
+
+        <div class = "Row" id = "Python-Project">
+            <div class="Column_1">
+                <h1 > Python Project </h1>
+            <p class = "center">
+                I was tasked with a Python Capstone Project.  
+                <br>
+                For my project i designed a CRUD functional website
+                <br>
+                that utilizes an API and a Webscraper.
+                <br>
+                You can view the code summary here:
+                <br>
+                <p class= "center"><a href = "https://github.com/jrheat2005/Python-Live-Project/tree/main" target = "_blank" > My Code Summary</a></p>
+                </p>
                 </div>
-                <div class="Column_4">
-                    <h1>LinkedIn</h1>
-                <p class="center">
-                    You can view my LinkedIn profile here:
-                    <br>
-                    <p class="center"><a href="https://www.linkedin.com/in/joshua-heaton-5296b727b/" target="_blank">My LinkedIn</a></p>
-                    </p>
+                <div class="Column_2">
+                    <a href = "https://github.com/jrheat2005/Python-Live-Project/tree/main" target = "_blank" ><img src = "Images/theaters.jpg" alt = "Project Info" ></a>
                 </div>
             </div>
 
